@@ -15,13 +15,13 @@ class Document
     @body.extend CharString
     if enc
       @body.encoding = enc
-    else
+    elsif !@body.encoding
       guessed_encoding = CharString.guess_encoding(str)
       if guessed_encoding == "UNKNOWN"
         raise EncodingDetectionFailure, "encoding not specified, and auto detection failed."
         # @body.encoding = 'ASCII' # default to ASCII <= BAD!
       else
-        @body.encoding = guessed_encoding
+	@body.encoding = guessed_encoding
       end
     end
     if e
